started creating week 3 discussion exercise doc & revising associated slides

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,6 @@ student-groups/
 
 # discussion data
 course-materials/discussion/week*/data/
+
+# sloan's headshot
+course-materials/lecture-slides/images/week1/sloane.jpeg
