added week 9 discussion section material outline (need to add slides still); added course materials page for week 5 make up class with Alex + week 11 final presentations

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,6 +31,8 @@ website:
             href: course-materials/week4.qmd
           - text: week 5 (2/3)
             href: course-materials/week5.qmd
+          - text: week 5 (2/7) - optional make up class
+            href: course-materials/graphic-design.qmd
           - text: week 6 (2/10)
             href: course-materials/week6.qmd
           - text: week 7 (2/17)
@@ -41,6 +43,8 @@ website:
             href: course-materials/week9.qmd
           - text: week 10 (3/10)
             href: course-materials/week10.qmd
+          - text: week 11 (3/17) - finals week
+            href: course-materials/week11.qmd
       - text: assignments
         href: assignments.qmd
       - text: redeem tokens
