added some pre-class prep for week 5 optional class (edits to come after chatting with Alex)

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -32,7 +32,7 @@ website:
             href: course-materials/week4.qmd
           - text: week 5 (2/3)
             href: course-materials/week5.qmd
-          - text: week 5 (2/7) - optional make up class
+          - text: week 5 (2/7) - attendance optional
             href: course-materials/graphic-design.qmd
           - text: week 6 (2/10)
             href: course-materials/week6.qmd
