continued mods on all assingments

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,7 +10,7 @@ website:
     icon: info-circle
     dismissable: false
     position: above-navbar
-    content: "Course materials are currently undergoing revision! EDS 240 will begin again in January 2026."
+    content: "Course materials are currently undergoing revision! EDS 240 will begin again in January 2026. In the meantime, things here might get a little messy {{< fa face-grin-beam-sweat >}}"
   title: "EDS 240"
   favicon: images/EDS240-hex.png
   navbar:
