minor updates to choosing graphic forms lecture

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,7 +24,7 @@ website:
         menu:
           - text: week 1 (1/7) - **syllabus, intro, review**
             href: course-materials/week1.qmd
-          - text: week 2 (1/14)
+          - text: week 2 (1/14) - **graphic forms, distributions**
             href: course-materials/week2.qmd
           - text: week 3 (1/21)
             href: course-materials/week3.qmd
