started updates to relationships lecture & key

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -42,7 +42,7 @@ website:
             href: course-materials/week8.qmd
           - text: week 9 (3/4) - **alternative chart types**
             href: course-materials/week9.qmd
-          - text: week 10 (3/11) - **TBD, wrap-up**
+          - text: week 10 (3/11) - **OJS, wrap-up**
             href: course-materials/week10.qmd
           - text: week 11 (3/19) - **finals week presentations**
             href: course-materials/week11.qmd
